# cortical_surface-gpl

./: CMakeLists.txt  README.md  cortical_surface-gpl.bcg  project_info.cmake
brainvisa/: CMakeLists.txt
brainvisa/toolboxes/cortical_surface/: cortical_surface.minf  cortical_surface.py
brainvisa/toolboxes/cortical_surface/processes/: CreateLabelTexture.py  TexSpam.py  TextureValueByClick.py  category_documentation.minf
brainvisa/toolboxes/cortical_surface/types/: cortical_surface.py
cmake/: cortical_surface-gpl-config.cmake.in
python/brainvisa/cortical_surface/morpho_curves/: curveAnalysis.py
python/brainvisa/cortical_surface/multiprocessing/: iterateAnalysis.py  mproc.py  multiprocessing.py
share-data/hiphop/average_model/: hiphop42-Left.gii  hiphop42-Left.gii.minf  hiphop42-Left_coarse_parcels.tex  hiphop42-Left_coarse_parcels.tex.minf  hiphop42-Left_lat.tex  hiphop42-Left_lat.tex.minf  hiphop42-Left_lon.tex  hiphop42-Left_lon.tex.minf  hiphop42-Left_spherical.gii  hiphop42-Left_spherical.gii.minf  hiphop42-Right.gii  hiphop42-Right.gii.minf  hiphop42-Right_coarse_parcels.tex  hiphop42-Right_coarse_parcels.tex.minf  hiphop42-Right_lat.tex  hiphop42-Right_lat.tex.minf  hiphop42-Right_lon.tex  hiphop42-Right_lon.tex.minf  hiphop42-Right_spherical.gii  hiphop42-Right_spherical.gii.minf
share-data/nomenclature/surfaceanalysis/: sulcal_coordinates_model_left.txt  sulcal_coordinates_model_left.txt.minf  sulcal_coordinates_model_right.txt  sulcal_coordinates_model_right.txt.minf
soma-dev/: soma-recipe.yaml
soma-env/: soma-env-recipe.yaml
(+318 files in other folders)
